--- a/static/css/app.css
+++ b/static/css/app.css
@@ -163,7 +163,7 @@ hr {
 /*logo*/
 .logo {
   position: absolute;
-  left: 35px;
+  left: 25px;
   top: 30px;
   z-index: 500; }
 
@@ -646,7 +646,7 @@ html.no-touchevents .nav-video {
 
 
 .client {
-  border: 1px solid #fff;
+ /*  border: 2px solid #2275b8; */
   text-align: center;
   padding: 30px 0;
   width: auto;
@@ -692,12 +692,12 @@ html.no-touchevents .nav-video {
   border-radius: 50%;
   -ms-transform: scale(0);
   transform: scale(0);
-  background: #2275b8;
+  /* background: #2275b8; */
   transition: transform 0.4s cubic-bezier(0.645, 0.045, 0.355, 1); }
 
 .client {
-  background-color: #000000;
-  background-image: url(../../images/%40stock/client-bg.jpg);
+  /* background-color: #000000;
+  background-image: url(../../images/%40stock/client-bg.jpg); */
   background-position: left top;
   background-repeat: no-repeat; }
 
