--- a/static/css/responsive.css
+++ b/static/css/responsive.css
@@ -1,3 +1,16 @@
+@media screen and (device-aspect-ratio: 40/71) {
+  .logo {
+  position: absolute;
+  left: 20px;
+  top: 30px;
+  z-index: 500; }
+  .logo a {
+  color: #2775b8;
+  font-size: 20px;
+  font-family: Cambria Math;
+   }
+}
+
 @media only screen and (max-width: 1400px) {
   svg#svg-graphic-about, svg#svg-graphic-works, svg#svg-graphic-blog, svg#svg-graphic-contact {
     width: 500px; }
