--- a/static/css/app.css
+++ b/static/css/app.css
@@ -114,7 +114,7 @@ hr {
 
 .full {
   clear: both;
-  padding: 160px 10%;
+  padding: 50px 10%;
   background-size: cover;
   background-position: 50% 50%;
   position: relative;
@@ -169,8 +169,9 @@ hr {
 
 .logo a {
   color: #2775b8;
-  font-size: 24px;
+  font-size: 18px;
   font-family: Cambria Math;
+  font-weight: 600;
    }
 
 /* home and nav */
