--- a/static/css/app.css
+++ b/static/css/app.css
@@ -647,16 +647,20 @@ html.no-touchevents .nav-video {
 
 
 .client {
- /*  border: 2px solid #2275b8; */
+ /*border: 2px solid #2275b8; */
   text-align: center;
-  padding: 30px 0;
+  padding: 10px 0;
   width: auto;
   height: auto;
   position: relative;
   overflow: hidden; }
 
+ .client {
+margin: 0px;
+ } 
+
 .clients .columns {
-  padding: 0; }
+  padding: 0px; }
 
 .peerblue{
     color:#277b8;}
@@ -673,7 +677,7 @@ html.no-touchevents .nav-video {
 
 .client img {
   position: relative;
-  transform: scale(1);
+  transform: scale(.5);
   transition: transform 0.4s cubic-bezier(0.645, 0.045, 0.355, 1); }
 
 .client:hover img {
@@ -690,15 +694,15 @@ html.no-touchevents .nav-video {
   width: 100%;
   height: 100%;
   display: block;
-  border-radius: 50%;
+  border-radius: 30%;
   -ms-transform: scale(0);
   transform: scale(0);
-  /* background: #2275b8; */
+  /*background: #2275b8; */
   transition: transform 0.4s cubic-bezier(0.645, 0.045, 0.355, 1); }
 
 .client {
-  /* background-color: #000000;
-  background-image: url(../../images/%40stock/client-bg.jpg); */
+  /*background-color: #000000;
+  background-image: url(../../images/%40stock/client-bg.jpg);*/ 
   background-position: left top;
   background-repeat: no-repeat; }
 
