--- a/static/css/foundation.css
+++ b/static/css/foundation.css
@@ -62,6 +62,7 @@ h1 {
 /**
      * Add the correct display in IE 9-.
      */
+
 figcaption,
 figure {
   display: block; }
@@ -1347,7 +1348,8 @@ h2, .h2 {
   font-size: 1.25rem;
   line-height: 1.4;
   margin-top: 0;
-  margin-bottom: 0.5rem; }
+  margin-bottom: 0.5rem;
+  }
 
 h3, .h3 {
   font-size: 1.1875rem;
