--- a/static/css/app.css
+++ b/static/css/app.css
@@ -518,7 +518,7 @@ html.no-touchevents .nav-video {
   color: #2275b8; }
 
 .colored-title-footer {
-  font-family: "Roboto";
+  font-family: 'Roboto';
   color: #FFFFFF;
   font-size: 23px; }
 
