--- a/static/css/app.css
+++ b/static/css/app.css
@@ -129,6 +129,13 @@ hr {
 .full-screen {
   height: 100%; }
 
+  .full-screen1 {
+  height: 100%;
+width: 80%;
+margin: 0 auto;
+   }
+}
+
 .full.black {
   background: #0277b8; }
 
@@ -155,7 +162,7 @@ hr {
   background: #f2be8c; }
 
 .full.footer-bg {
-  background-color: rgb(39,117,184);
+  background-color: #0277b8;
   /*background-image: url(../../images/%40stock/footer-bg.png);*/
   background-position: center center;
   background-repeat: no-repeat; }
@@ -717,6 +724,19 @@ margin: 0px;
   background-repeat: no-repeat; }
 
 /*------------*/
+
+
+.column_clients{
+float: left;
+width: 30%;
+padding: 10px;
+padding-left: 200px;
+}
+
+.clients{
+  padding: 10px;
+  margin: 0 auto;
+}
 .clients .columns {
 
   padding:0px; }
@@ -862,6 +882,7 @@ margin: 0px;
 
 /* icon -text */
 .icon-1 {
+  padding: 10px;
   width: 100px;
   height: 100px;
   background-color: #ffffff;
@@ -869,6 +890,7 @@ margin: 0px;
 
 
 .icon-2 {
+  padding: 10px;
   width: 100px;
   height: 100px;
   background-color: #ffffff;
@@ -876,42 +898,39 @@ margin: 0px;
   }
 
 .icon-3 {
+  padding: 10px;
   width: 100px;
   height: 100px;
   background-color: #ffffff;
   background-image: url(../../images/%40stock/contigent.svg);
-  background-repeat: repeat; }
+  }
 
   .icon-4 {
+    padding: 10px;
   width: 100px;
   height: 100px;
   background-color: #ffffff;
   background-image: url(../../images/%40stock/training.svg); }
 
   .icon-5 {
+    padding: 10px;
   width: 100px;
   height: 100px;
   background-color: #ffffff;
   background-image: url(../../images/%40stock/result.svg); }
 
 .icon-text h3 {
-  margin-top: -50px;
-  margin-left: 100px; }
+  vertical-align: top;
+    display: inline-block;
+    text-align: center;
+    width: 120px;
+    padding: 8px;
+    }
+.icon-spacing{
+margin-left: 150px;
 
-.icon-text ul {
-  margin-left: 60px;
-  margin-top: 50px;
-  list-style: none;
-  line-height: 1.9em;
-  font-size: 18px; }
+}
 
-.icon-text ul li::before {
-  content: "";
-  width: 10px;
-  height: 1px;
-  margin-right: 10px;
-  display: inline-block;
-  background: #2275b8; }
 
 .icon-text:hover .icon-2 {
   -webkit-animation: BackgroundAnimated-l-r 2s linear infinite;
@@ -960,20 +979,24 @@ margin: 0px;
   }
 
   .carousel-cell{
-   width: 66%;
+
+   width: 100%;
   height: 280px;
   margin-right: 10px;
   border-radius: 5px;
-  background: rgba(42,169,226, 0.2);
   align-content: center;
- /* counter-increment: gallery-cell;*/
   }
+
+
 
 .carousel-cell h2{
  padding: 10px; 
 }
 
 .carousel-cell p{
+  background-color: rgba(2, 119, 184, 0.3);
+  color: white;
+  margin:10px;
  padding: 10px; 
 font-size: 1vw !important;
 }
@@ -994,6 +1017,7 @@ font-size: 1vw !important;
   /*content: counter(gallery-cell);*/
   line-height: 280px;
   
+ background-image: url(images/%40stock/aviation.jpeg) ;
   color: white;
   }
 
