--- a/static/css/app.css
+++ b/static/css/app.css
@@ -125,6 +125,7 @@ hr {
 
 .full_test{
   clear: both;
+  background-color: rgba(2, 119, 184, 0.3); 
 }
 .full-screen {
   height: 100%; }
@@ -991,6 +992,7 @@ margin-left: 150px;
   }
 .carousel-cell span{
   color:rgb(2, 119, 184);
+  float:right;
 }
 
 
@@ -999,8 +1001,8 @@ margin-left: 150px;
 }
 
 .carousel-cell p{
- background-color: rgba(2, 119, 184, 0.3);
-  color: white;
+ ;
+  color: black;
   margin:10px;
  padding: 10px; 
 font-size: 1.8vw !important;
