--- a/static/css/app.css
+++ b/static/css/app.css
@@ -983,7 +983,7 @@ margin-left: 150px;
 
   .carousel{
    background-color: rgba(2, 119, 184, 0.3) !important; 
-   height: 300px;
+   height: 320px;
   }
 
   .carousel-cell{
@@ -992,7 +992,8 @@ margin-left: 150px;
   border-radius: 5px;
   align-content: center;
   }
-.carousel-cell span{
+.carousel-cell  span{
+  font-weight: bold ;
   font-size: 1.8vw !important;
   color:rgb(2, 119, 184);
   float:right;
@@ -1005,11 +1006,12 @@ margin-left: 150px;
 }
 
 .carousel-cell p{
- font-style:  italic;
+  font-family: lato;
+ font-style: italic;
   color: black;
   margin:10px;
  padding: 10px; 
-font-size: 1.8vw !important;
+font-size: 2vw !important;
 }
 
 .carousel-cell  {
