--- a/static/css/app.css
+++ b/static/css/app.css
@@ -644,7 +644,18 @@ html.no-touchevents .nav-video {
     background-position: 0 0; } }
 
 .action-hint {
+  width: 300px;
+  float: left;
+  margin: 10px;
   font-family: montserrat;
+  letter-spacing: 0px;
+  font-size: 13px; }
+
+  .action-hint1 {
+   
+  font-family: montserrat;
+  float: right;
+  margin: 10px;
   letter-spacing: 0px;
   font-size: 13px; }
 
@@ -983,7 +994,7 @@ margin-left: 150px;
 
   .carousel{
    background-color: rgba(2, 119, 184, 0.3) !important; 
-   height: 320px;
+   height: 440px;
   }
 
   .carousel-cell{
@@ -1000,6 +1011,15 @@ margin-left: 150px;
   margin-right: 20px;
 }
 
+.carousel-cell img{
+  height: 100px; 
+  width: 100px;
+  margin-top: 10px;
+  display: block;
+  margin-left: auto;
+  margin-right: auto;
+  
+}
 
 .carousel-cell h2{
  padding: 10px; 
