--- a/static/css/app.css
+++ b/static/css/app.css
@@ -929,39 +929,44 @@ margin-left: 10%;
 }
 .icon-1 {
   padding: 10px;
-  width: 80px;
-  height: 100px;
+  width: 100%;
+  height: 80px;
+  background-repeat: no-repeat;
   background-color: #ffffff;
   background-image: url(../../images/%40stock/search.svg); }
 
 
 .icon-2 {
   padding: 10px;
-  width: 80px;
-  height: 100px;
+  width: 100%;
+  height: 80px;
+  background-repeat: no-repeat;
   background-color: #ffffff;
   background-image: url(../../images/%40stock/consulting.svg);
   }
 
 .icon-3 {
   padding: 10px;
-  width: 80px;
-  height: 100px;
+ width: 100%;
+  height: 80px;
+  background-repeat: no-repeat;
   background-color: #ffffff;
   background-image: url(../../images/%40stock/contigent.svg);
   }
 
   .icon-4 {
     padding: 10px;
-  width: 80px;
-  height: 100px;
+  width: 100%;
+  height: 80px;
+  background-repeat: no-repeat;
   background-color: #ffffff;
   background-image: url(../../images/%40stock/training.svg); }
 
   .icon-5 {
     padding: 10px;
-  width: 80px;
-  height: 100px;
+ width: 100%;
+  height: 80px;
+  background-repeat: no-repeat;
   background-color: #ffffff;
   background-image: url(../../images/%40stock/result.svg); }
 
