--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1992,8 +1992,9 @@ margin-bottom: 5%;
 
 .team_text p{
 color: white;
-text-align: left;
-padding: 10px;
+text-align: justify;
+padding-top: 10px;
+padding-bottom: 10px;
 margin-bottom: 0px !important;
 }
 
