--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1090,7 +1090,8 @@ text-align:justify;
 .modBoxedTextSlider {
   width: 100%;
   height
-  background: #000; }
+  background: #000;
+ }
 
 .modBoxedTextSlider .slidebox {
   background: #e9e9e9;
@@ -1101,6 +1102,7 @@ text-align:justify;
 
 .slidebox img{
 height: 500px !important;
+
 border-top:2px solid #2aa9e2;
 border-right: 1px solid #2aa9e2;
 border-bottom: 2px solid #2aa9e2;
@@ -1120,10 +1122,11 @@ border-left: 1px solid #2aa9e2;
 
 .member-dec {
   background: #000;
-  padding: 40px 0 40px 80px;
+  padding: 40px 0 40px 10px;
   transition: background 0.1s ease-in; }
 
 .member-dec h3 {
+  font-size: 22px !important;
   margin-bottom: 10px;
   text-transform: none; }
 
