--- a/static/css/app.css
+++ b/static/css/app.css
@@ -87,7 +87,7 @@ h3 {
   font-size: 24px; }
 
 h2.white {
-  color: #fff; }
+  color: #0277b8; }
 
 .appraiser {
   font-family: montserrat;
@@ -111,8 +111,8 @@ hr {
   padding: 10px 30px; }
 
 .button.boxed.white {
-  border: 1px solid #fff;
-  background: none;
+  border: 1px solid #0277b8;
+  background:#0277b8 ;
   color: #fff; }
 
 .button.boxed.white:hover {
@@ -1770,7 +1770,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 
 form input[type="text"], form input[type="password"], form input[type="date"], form input[type="datetime"], form input[type="datetime-local"], form input[type="month"], form input[type="week"], form input[type="email"], form input[type="number"], form input[type="search"], form input[type="tel"], form input[type="time"], form input[type="url"], form textarea {
   background: none;
-  border: 1px solid rgba(255, 255, 255, 0.7);
+  border: 1px solid rgba(255, 255, 255,);
   color: #fff; }
 
 input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="week"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="time"]:focus, input[type="url"]:focus, input[type="color"]:focus, textarea:focus {
