--- a/static/css/app.css
+++ b/static/css/app.css
@@ -1772,7 +1772,7 @@ input[type="text"], input[type="password"], input[type="date"], input[type="date
 form input[type="text"], form input[type="password"], form input[type="date"], form input[type="datetime"], form input[type="datetime-local"], form input[type="month"], form input[type="week"], form input[type="email"], form input[type="number"], form input[type="search"], form input[type="tel"], form input[type="time"], form input[type="url"], form textarea {
   background: none;
   border: 1px solid #333;
-  color: #000; }
+  color: #000 !important; }
 
 input[type="text"]:focus, input[type="password"]:focus, input[type="date"]:focus, input[type="datetime"]:focus, input[type="datetime-local"]:focus, input[type="month"]:focus, input[type="week"]:focus, input[type="email"]:focus, input[type="number"]:focus, input[type="search"]:focus, input[type="tel"]:focus, input[type="time"]:focus, input[type="url"]:focus, input[type="color"]:focus, textarea:focus {
   background: none;
@@ -1801,7 +1801,7 @@ form textarea {
   height: 200px; }
 
 input.button:hover {
-  color: #eee; }
+  color: #000; }
 
 p#thanks {
   color: #ccc;
