--- a/static/css/app.css
+++ b/static/css/app.css
@@ -15,6 +15,18 @@
 
 --------------*/
 
+.contigent_link{
+  margin-bottom: 50px;
+}
+
+.contigent_link img{
+margin-bottom: 10px;
+}
+
+.contigent_link a{
+  font-size: 15px;
+}
+
 .privacy{
 width: 100%;
 clear: both;
