--- a/static/css/app.css
+++ b/static/css/app.css
@@ -14,6 +14,8 @@
 12. Case study
 
 --------------*/
+
+
 .logo_container{
   text-align: center;
 }
@@ -389,7 +391,8 @@ body.hover-contact svg #svg-contact path, body.hover-contact svg #svg-contact po
   transform: scale(1.2);
   transform-origin: center;
   transition-property: transform;
-  transition-duration: .3s; }
+  transition-duration: .3s;
+  cursor: url(../../images/cursor.png),auto;  }
 
 .box:hover .header span {
   bottom: 30%;
